fix dependency and test